--- a/src/styles/components/EpisodeList.scss
+++ b/src/styles/components/EpisodeList.scss
@@ -3,39 +3,45 @@
     flex-direction: column;
     gap: 20px;
     width: calc(100% - 20px);
-}
-.episodes-count {
-    box-shadow: 0 4px 4px rgba(87, 87, 87, 0.1); 
-    border: 1px solid rgba(87, 87, 87, 0.1);
-    padding: 10px;
-    width: 100%;
-}
-.episode-table {
-    display: flex;
-    flex-direction: column;
-    max-height: calc(100vh - 200px); 
-    overflow-y: auto; 
-    box-shadow: 0 4px 4px rgba(87, 87, 87, 0.1); 
-}
 
-.episode-row {
-    display: flex;
-    align-items: center;
-    border-bottom: 1px solid #888; 
-}
+    .episodes-count {
+        box-shadow: 0 4px 4px rgba(87, 87, 87, 0.1); 
+        border: 1px solid rgba(87, 87, 87, 0.1);
+        padding: 10px;
+        width: 100%;
+    }
 
-.episode-column {
-    flex: 1;
-    padding: 8px;
-    display: flex; 
-    flex-direction: column; 
-}
+    .episode-table {
+        display: flex;
+        flex-direction: column;
+        max-height: calc(100vh - 200px); 
+        overflow-y: auto; 
+        box-shadow: 0 4px 4px rgba(87, 87, 87, 0.1); 
 
-.episode-header {
-    font-weight: bold;
-    border-bottom: 2px solid #888; 
-}
+        .episode-row {
+            display: flex;
+            align-items: center;
+            border-bottom: 1px solid #888; 
 
-.episode-row:nth-child(even) {
-    background-color: #f5f5f5; 
+            &:nth-child(even) {
+                background-color: #f5f5f5; 
+            }
+        }
+
+        .episode-column {
+            flex: 1;
+            padding: 8px;
+            display: flex; 
+            flex-direction: column; 
+
+            &__link {
+                color: #0062c4;
+            }
+        }
+
+        .episode-header {
+            font-weight: bold;
+            border-bottom: 2px solid #888; 
+        }
+    }
 }
