--- a/src/styles/components/Header.scss
+++ b/src/styles/components/Header.scss
@@ -1,11 +1,9 @@
 .header {
     border-bottom: 1px solid #ccc;
     margin-bottom: 10px;
-}
-  
-.header__link {
-    color: #0062c4;
-    text-decoration: none;
-    font-weight: bold;
+    &__link { 
+        color: #0062c4;
+        font-weight: bold;
+    }
 }
   
