--- a/src/styles/pages/EpisodePage.scss
+++ b/src/styles/pages/EpisodePage.scss
@@ -13,7 +13,12 @@
     }
     &__title,
     &__description {
-        margin-bottom: 10px;
+        margin-bottom: 20px;
+        br {
+            display: block;
+            margin-bottom: 10px;
+            content: "";
+        }
     }
     &__audio {
         width: 100%;
