--- a/src/styles/pages/PodcastList.scss
+++ b/src/styles/pages/PodcastList.scss
@@ -42,12 +42,13 @@
           border-radius: 100%;
           margin: -50px 10% 0;
           box-shadow: 0 -4px 4px rgba(87, 87, 87, 0.1); 
+          aspect-ratio: 1;
   
           .podcast-image {
             width: 100%;
-            height: auto;
-            border-top-left-radius: 8px;
-            border-top-right-radius: 8px;
+            height: 100%;
+            border-radius: 100%;
+            object-fit: cover;
           }
         }
   
